# FileOperate

./: .env.example  .gitattributes  .gitignore  agent.py  langgraph.json  normalized-tester.py  pixi.toml  run-cli-test.sh  runner-box.py  runner.py  test-daytona.py
deep-agents-ui/: .gitignore
deep-agents-ui/src/app/: page.tsx
deep-agents-ui/src/app/components/: FileViewDialog.tsx  TasksFilesSidebar.tsx  UploadManager.tsx  WorkspacePanel.tsx
deep-agents-ui/src/app/hooks/: useChat.ts
deep-agents-ui/src/app/types/: types.ts
deepagents/: __init__.py
deepagents/libs/deepagents/: pyproject.toml
docs/: Design of the file-processing system.md  How to enable the Three important DBs.md  Launch the three local models.md  Prompt.md  tutorials.md
docs/.obsidian/: workspace.json
docs/Prompts/: ask GPT for learning the desing of the prompting template.md
prompts/: __init__.py  delegation.py  orchestrator.py
smartagent/: __init__.py  agent.py  renderer.py  runner.py  sandbox.py  workspace.py
smartagent/prompts/: __init__.py  orchestrator_sandbox.py  transcription.py
smartagent/tools/: __init__.py  audio.py  data.py  document.py  filesystem.py  meta.py
src/: simple_deep_agent.py
src/deep_scholar/: .env.example  README.md  agent.py  langgraph.json  pyproject.toml  research_agent.ipynb  utils.py
src/deep_scholar/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/deep_scholar/research_agent/: __init__.py  ingestion.py  prompts.py  tools.py
tools/: audio.py  data.py  document.py  filesystem.py  meta.py
(+12 files in other folders)
